Adds extra auth APIs for UI to consume.
